--- a/vista_proyecto_persona/get.html
+++ b/vista_proyecto_persona/get.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <div class="header_name">
-            <h1><a href="">Noche Oscura del Alma</a></h1>
+            <h1><a href="#">Noche Oscura del Alma</a></h1>
         </div>
         <nav class="header_nav">
             <ul>
